# serializer version: 1
# name: test_about
  dict({
    'version': 'v2.4.1',
  })
# ---
# name: test_groups_self
  dict({
    'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
    'name': 'home',
    'slug': 'home',
  })
# ---
# name: test_importing_recipe
  dict({
    'date_added': datetime.date(2024, 6, 29),
    'description': 'The world’s most famous cake, the Original Sacher-Torte, is the consequence of several lucky twists of fate. The first was in 1832, when the Austrian State Chancellor, Prince Klemens Wenzel von Metternich, tasked his kitchen staff with concocting an extraordinary dessert to impress his special guests. As fortune had it, the chef had fallen ill that evening, leaving the apprentice chef, the then-16-year-old Franz Sacher, to perform this culinary magic trick. Metternich’s parting words to the talented teenager: “I hope you won’t disgrace me tonight.”',
    'group_id': '24477569-f6af-4b53-9e3f-6d04b0ca6916',
    'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
    'image': 'SuPW',
    'ingredients': list([
      dict({
        'is_food': True,
        'note': '130g dark couverture chocolate (min. 55% cocoa content)',
        'quantity': 1.0,
        'reference_id': 'a3adfe78-d157-44d8-98be-9c133e45bb4e',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '1 Vanilla Pod',
        'quantity': 1.0,
        'reference_id': '41d234d7-c040-48f9-91e6-f4636aebb77b',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '150g softened butter',
        'quantity': 1.0,
        'reference_id': 'f6ce06bf-8b02-43e6-8316-0dc3fb0da0fc',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '100g Icing sugar',
        'quantity': 1.0,
        'reference_id': 'f7fcd86e-b04b-4e07-b69c-513925811491',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '6 Eggs',
        'quantity': 1.0,
        'reference_id': 'a831fbc3-e2f5-452e-a745-450be8b4a130',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '100g Castor sugar',
        'quantity': 1.0,
        'reference_id': 'b5ee4bdc-0047-4de7-968b-f3360bbcb31e',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '140g Plain wheat flour',
        'quantity': 1.0,
        'reference_id': 'a67db09d-429c-4e77-919d-cfed3da675ad',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '200g apricot jam',
        'quantity': 1.0,
        'reference_id': '55479752-c062-4b25-aae3-2b210999d7b9',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '200g castor sugar',
        'quantity': 1.0,
        'reference_id': 'ff9cd404-24ec-4d38-b0aa-0120ce1df679',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '150g dark couverture chocolate (min. 55% cocoa content)',
        'quantity': 1.0,
        'reference_id': 'c7fca92e-971e-4728-a227-8b04783583ed',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': 'Unsweetend whipped cream to garnish',
        'quantity': 1.0,
        'reference_id': 'ef023f23-7816-4871-87f6-4d29f9a283f7',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': 'A little water',
        'quantity': None,
        'reference_id': '811328dc-a5d4-4104-80d2-e26fc52b5966',
        'unit': None,
      }),
    ]),
    'instructions': list([
      dict({
        'ingredient_references': list([
        ]),
        'instruction_id': '2d558dbf-5361-4ef2-9d86-4161f5eb6146',
        'text': 'Preheat oven to 170°C. Line the base of a springform with baking paper, grease the sides, and dust with a little flour. Melt couverture over boiling water. Let cool slightly.',
        'title': None,
      }),
      dict({
        'ingredient_references': list([
        ]),
        'instruction_id': 'dbcc1c37-3cbf-4045-9902-8f7fd1e68f0a',
        'text': 'Slit vanilla pod lengthwise and scrape out seeds. Using a hand mixer with whisks, beat the softened butter with the icing sugar and vanilla seeds until bubbles appear.',
        'title': None,
      }),
      dict({
        'ingredient_references': list([
        ]),
        'instruction_id': '2265bd14-a691-40b1-9fe6-7b5dfeac8401',
        'text': 'Separate the eggs. Whisk the egg yolks into the butter mixture one by one. Now gradually add melted couverture chocolate. Beat the egg whites with the castor sugar until stiff, then place on top of the butter and chocolate mixture. Sift the flour over the mixture, then fold in the flour and beaten egg whites.',
        'title': None,
      }),
      dict({
        'ingredient_references': list([
        ]),
        'instruction_id': '0aade447-dfac-4aae-8e67-ac250ad13ae2',
        'text': "Transfer the mixture to the springform, smooth the top, and bake in the oven (middle rack) for 10–15 minutes, leaving the oven door a finger's width ajar. Then close the oven and bake for approximately 50 minutes. (The cake is done when it yields slightly to the touch.)",
        'title': None,
      }),
      dict({
        'ingredient_references': list([
        ]),
        'instruction_id': '5fdcb703-7103-468d-a65d-a92460b92eb3',
        'text': 'Remove the cake from the oven and loosen the sides of the springform. Carefully tip the cake onto a cake rack lined with baking paper and let cool for approximately 20 minutes. Then pull off the baking paper, turn the cake over, and leave on rack to cool completely.',
        'title': None,
      }),
      dict({
        'ingredient_references': list([
        ]),
        'instruction_id': '81474afc-b44e-49b3-bb67-5d7dab8f832a',
        'text': 'Cut the cake in half horizontally. Warm the jam and stir until smooth. Brush the top of both cake halves with the jam and place one on top of the other. Brush the sides with the jam as well.',
        'title': None,
      }),
      dict({
        'ingredient_references': list([
        ]),
        'instruction_id': '8fac8aee-0d3c-4f78-9ff8-56d20472e5f1',
        'text': 'To make the glaze, put the castor sugar into a saucepan with 125 ml water and boil over high heat for approximately 5 minutes. Take the sugar syrup off the stove and leave to cool a little. Coarsely chop the couverture, gradually adding it to the syrup, and stir until it forms a thick liquid (see tip below).',
        'title': None,
      }),
      dict({
        'ingredient_references': list([
        ]),
        'instruction_id': '7162e099-d651-4656-902a-a09a9b40c4e1',
        'text': 'Pour all the lukewarm glaze liquid at once over the top of the cake and quickly spread using a palette knife. Leave the glaze to set for a few hours. Serve garnished with whipped cream.',
        'title': None,
      }),
    ]),
    'name': 'Original Sacher-Torte (2)',
    'original_url': 'https://www.sacher.com/en/original-sacher-torte/recipe/',
    'recipe_id': 'fada9582-709b-46aa-b384-d5952123ad93',
    'recipe_yield': '4 servings',
    'slug': 'original-sacher-torte-2',
    'tags': list([
      dict({
        'name': 'Sacher',
        'slug': 'sacher',
        'tag_id': '1b5789b9-3af6-412e-8c77-8a01caa0aac9',
      }),
      dict({
        'name': 'Cake',
        'slug': 'cake',
        'tag_id': '1cf17f96-58b5-4bd3-b1e8-1606a64b413d',
      }),
      dict({
        'name': 'Torte',
        'slug': 'torte',
        'tag_id': '3f5f0a3d-728f-440d-a6c7-5a68612e8c67',
      }),
      dict({
        'name': 'Sachertorte',
        'slug': 'sachertorte',
        'tag_id': '525f388d-6ee0-4ebe-91fc-dd320a7583f0',
      }),
      dict({
        'name': 'Sacher Torte Cake',
        'slug': 'sacher-torte-cake',
        'tag_id': '544a6e08-a899-4f63-9c72-bb2924df70cb',
      }),
      dict({
        'name': 'Sacher Torte',
        'slug': 'sacher-torte',
        'tag_id': '576c0a82-84ee-4e50-a14e-aa7a675b6352',
      }),
      dict({
        'name': 'Original Sachertorte',
        'slug': 'original-sachertorte',
        'tag_id': 'd530b8e4-275a-4093-804b-6d0de154c206',
      }),
    ]),
    'user_id': 'bf1c62fe-4941-4332-9886-e54e88dbdba0',
  })
# ---
# name: test_mealplan_today
  list([
    dict({
      'description': None,
      'entry_type': <MealplanEntryType.DINNER: 'dinner'>,
      'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
      'household_id': None,
      'mealplan_date': datetime.date(2024, 1, 21),
      'mealplan_id': 192,
      'recipe': dict({
        'description': 'This is a wonderful option for picnics and grill outs when you are looking for a new take on potato salad. This simple side salad made with cauliflower, peas, and hard boiled eggs can be made the day ahead and chilled until party time!',
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'image': 'qLdv',
        'name': 'Cauliflower Salad',
        'original_url': 'https://www.allrecipes.com/recipe/142152/cauliflower-salad/',
        'recipe_id': '40393996-417e-4487-a081-28608a668826',
        'recipe_yield': '6 servings',
        'slug': 'cauliflower-salad',
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      'title': None,
      'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
    }),
    dict({
      'description': None,
      'entry_type': <MealplanEntryType.DINNER: 'dinner'>,
      'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
      'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
      'mealplan_date': datetime.date(2024, 1, 21),
      'mealplan_id': 206,
      'recipe': dict({
        'description': 'Easy, cheesy, sausage pasta! In the whirlwind of mid-week mayhem, dinner doesn’t have to be a chore – this 15-minute pasta, featuring HECK’s Chicken Italia Chipolatas is your ticket to a delicious and hassle-free mid-week meal.',
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'image': 'BeNc',
        'name': '15 Minute Cheesy Sausage & Veg Pasta',
        'original_url': 'https://www.annabelkarmel.com/recipes/15-minute-cheesy-sausage-veg-pasta/',
        'recipe_id': '872bb477-8d90-4025-98b0-07a9d0d9ce3a',
        'recipe_yield': '',
        'slug': '15-minute-cheesy-sausage-veg-pasta',
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      'title': None,
      'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
    }),
    dict({
      'description': None,
      'entry_type': <MealplanEntryType.LUNCH: 'lunch'>,
      'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
      'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
      'mealplan_date': datetime.date(2024, 1, 21),
      'mealplan_id': 207,
      'recipe': dict({
        'description': '',
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'image': None,
        'name': 'cake',
        'original_url': None,
        'recipe_id': '744a9831-fa56-4f61-9e12-fc5ebce58ed9',
        'recipe_yield': None,
        'slug': 'cake',
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      'title': None,
      'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
    }),
    dict({
      'description': None,
      'entry_type': <MealplanEntryType.LUNCH: 'lunch'>,
      'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
      'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
      'mealplan_date': datetime.date(2024, 1, 21),
      'mealplan_id': 208,
      'recipe': dict({
        'description': 'Jazz up chicken breasts in this fruity, sweetly spiced sauce with pomegranate seeds, toasted almonds and tagine paste',
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'image': 'lF4p',
        'name': 'Pomegranate chicken with almond couscous',
        'original_url': 'https://www.bbcgoodfood.com/recipes/pomegranate-chicken-almond-couscous',
        'recipe_id': '27455eb2-31d3-4682-84ff-02a114bf293a',
        'recipe_yield': '4 servings',
        'slug': 'pomegranate-chicken-with-almond-couscous',
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      'title': None,
      'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
    }),
    dict({
      'description': None,
      'entry_type': <MealplanEntryType.DINNER: 'dinner'>,
      'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
      'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
      'mealplan_date': datetime.date(2024, 1, 21),
      'mealplan_id': 209,
      'recipe': dict({
        'description': '',
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'image': 'ALqz',
        'name': 'Csirkés és tofus empanadas',
        'original_url': 'https://streetkitchen.hu/street-kitchen/csirkes-es-tofus-empanadas/',
        'recipe_id': '4233330e-6947-4042-90b7-44c405b70714',
        'recipe_yield': '16 servings',
        'slug': 'csirkes-es-tofus-empanadas',
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      'title': None,
      'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
    }),
    dict({
      'description': None,
      'entry_type': <MealplanEntryType.DINNER: 'dinner'>,
      'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
      'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
      'mealplan_date': datetime.date(2024, 1, 21),
      'mealplan_id': 210,
      'recipe': dict({
        'description': 'This All-American beef stew recipe includes tender beef coated in a rich, intense sauce and vegetables that bring complementary texture and flavor.',
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'image': '356X',
        'name': 'All-American Beef Stew Recipe',
        'original_url': 'https://www.seriouseats.com/all-american-beef-stew-recipe',
        'recipe_id': '48f39d27-4b8e-4c14-bf36-4e1e6497e75e',
        'recipe_yield': '6 servings',
        'slug': 'all-american-beef-stew-recipe',
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      'title': None,
      'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
    }),
    dict({
      'description': None,
      'entry_type': <MealplanEntryType.DINNER: 'dinner'>,
      'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
      'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
      'mealplan_date': datetime.date(2024, 1, 21),
      'mealplan_id': 223,
      'recipe': dict({
        'description': 'Jazz up chicken breasts in this fruity, sweetly spiced sauce with pomegranate seeds, toasted almonds and tagine paste',
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'image': 'lF4p',
        'name': 'Pomegranate chicken with almond couscous',
        'original_url': 'https://www.bbcgoodfood.com/recipes/pomegranate-chicken-almond-couscous',
        'recipe_id': '27455eb2-31d3-4682-84ff-02a114bf293a',
        'recipe_yield': '4 servings',
        'slug': 'pomegranate-chicken-with-almond-couscous',
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      'title': None,
      'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
    }),
  ])
# ---
# name: test_mealplans
  dict({
    'items': list([
      dict({
        'description': None,
        'entry_type': <MealplanEntryType.DINNER: 'dinner'>,
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'mealplan_date': datetime.date(2024, 1, 22),
        'mealplan_id': 230,
        'recipe': dict({
          'description': "Een traybake is eigenlijk altijd een goed idee. Deze zoete aardappel curry traybake dus ook. Waarom? Omdat je alleen maar wat groenten - en in dit geval kip - op een bakplaat (traybake dus) legt, hier wat kruiden aan toevoegt en deze in de oven schuift. Ideaal dus als je geen zin hebt om lang in de keuken te staan. Maar gewoon lekker op de bank wil ploffen om te wachten tot de oven klaar is. Joe! That\\'s what we like. Deze zoete aardappel curry traybake bevat behalve zoete aardappel en curry ook kikkererwten, kippendijfilet en bloemkoolroosjes. Je gebruikt yoghurt en limoen als een soort dressing. En je serveert deze heerlijke traybake met naanbrood. Je kunt natuurljk ook voor deze traybake met chipolataworstjes gaan. Wil je graag meer ovengerechten? Dan moet je eigenlijk even kijken naar onze Ovenbijbel. Onmisbaar in je keuken! We willen je deze zoete aardappelstamppot met prei ook niet onthouden. Megalekker bordje comfortfood als je \\'t ons vraagt.",
          'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
          'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
          'image': 'AiIo',
          'name': 'Zoete aardappel curry traybake',
          'original_url': 'https://chickslovefood.com/recept/zoete-aardappel-curry-traybake/',
          'recipe_id': 'c5f00a93-71a2-4e48-900f-d9ad0bb9de93',
          'recipe_yield': '2 servings',
          'slug': 'zoete-aardappel-curry-traybake',
          'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
        }),
        'title': None,
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': None,
        'entry_type': <MealplanEntryType.BREAKFAST: 'breakfast'>,
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'mealplan_date': datetime.date(2024, 1, 23),
        'mealplan_id': 229,
        'recipe': dict({
          'description': 'The BEST Roast Chicken recipe is simple, budget friendly, and gives you a tender, mouth-watering chicken full of flavor! Served with roasted vegetables, this recipe is simple enough for any cook!',
          'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
          'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
          'image': 'JeQ2',
          'name': 'Roast Chicken',
          'original_url': 'https://tastesbetterfromscratch.com/roast-chicken/',
          'recipe_id': '5b055066-d57d-4fd0-8dfd-a2c2f07b36f1',
          'recipe_yield': '6 servings',
          'slug': 'roast-chicken',
          'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
        }),
        'title': None,
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': None,
        'entry_type': <MealplanEntryType.LUNCH: 'lunch'>,
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'mealplan_date': datetime.date(2024, 1, 23),
        'mealplan_id': 226,
        'recipe': dict({
          'description': 'Te explicamos paso a paso, de manera sencilla, la elaboración de la receta de pollo al curry con leche de coco en 10 minutos. Ingredientes, tiempo de...',
          'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
          'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
          'image': 'INQz',
          'name': 'Receta de pollo al curry en 10 minutos (con vídeo incluido)',
          'original_url': 'https://www.directoalpaladar.com/recetas-de-carnes-y-aves/receta-de-pollo-al-curry-en-10-minutos',
          'recipe_id': 'e360a0cc-18b0-4a84-a91b-8aa59e2451c9',
          'recipe_yield': '2 servings',
          'slug': 'receta-de-pollo-al-curry-en-10-minutos-con-video-incluido',
          'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
        }),
        'title': None,
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': None,
        'entry_type': <MealplanEntryType.LUNCH: 'lunch'>,
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'mealplan_date': datetime.date(2024, 1, 23),
        'mealplan_id': 224,
        'recipe': dict({
          'description': 'bourguignon, oignon, carotte, bouquet garni, vin rouge, beurre, sel, poivre',
          'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
          'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
          'image': 'nj5M',
          'name': 'Boeuf bourguignon : la vraie recette (2)',
          'original_url': 'https://www.marmiton.org/recettes/recette_boeuf-bourguignon_18889.aspx',
          'recipe_id': '9c7b8aee-c93c-4b1b-ab48-2625d444743a',
          'recipe_yield': '4 servings',
          'slug': 'boeuf-bourguignon-la-vraie-recette-2',
          'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
        }),
        'title': None,
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': None,
        'entry_type': <MealplanEntryType.DINNER: 'dinner'>,
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'mealplan_date': datetime.date(2024, 1, 23),
        'mealplan_id': 222,
        'recipe': dict({
          'description': 'Εύκολη μακαρονάδα με κεφτεδάκια στον φούρνο από τον Άκη Πετρετζίκη. Φτιάξτε την πιο εύκολη μακαρονάδα με κεφτεδάκια σε μόνο ένα σκεύος.',
          'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
          'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
          'image': 'En9o',
          'name': 'Εύκολη μακαρονάδα με κεφτεδάκια στον φούρνο (1)',
          'original_url': 'https://akispetretzikis.com/recipe/7959/efkolh-makaronada-me-keftedakia-ston-fourno',
          'recipe_id': 'f79f7e9d-4b58-4930-a586-2b127f16ee34',
          'recipe_yield': '6 servings',
          'slug': 'eukole-makaronada-me-kephtedakia-ston-phourno-1',
          'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
        }),
        'title': None,
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': None,
        'entry_type': <MealplanEntryType.DINNER: 'dinner'>,
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'mealplan_date': datetime.date(2024, 1, 23),
        'mealplan_id': 221,
        'recipe': dict({
          'description': 'Delicious Greek turkey meatballs with lemon orzo, tender veggies, and a creamy feta yogurt sauce. These healthy baked Greek turkey meatballs are filled with tons of wonderful herbs and make the perfect protein-packed weeknight meal!',
          'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
          'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
          'image': 'Kn62',
          'name': 'Greek Turkey Meatballs with Lemon Orzo & Creamy Feta Yogurt Sauce',
          'original_url': 'https://www.ambitiouskitchen.com/greek-turkey-meatballs/',
          'recipe_id': '47595e4c-52bc-441d-b273-3edf4258806d',
          'recipe_yield': '4 servings',
          'slug': 'greek-turkey-meatballs-with-lemon-orzo-creamy-feta-yogurt-sauce',
          'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
        }),
        'title': None,
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': None,
        'entry_type': <MealplanEntryType.SIDE: 'side'>,
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'mealplan_date': datetime.date(2024, 1, 23),
        'mealplan_id': 220,
        'recipe': dict({
          'description': 'Einfacher Nudelauflauf mit Brokkoli, Sahnesauce und extra Käse. Dieses vegetarische 5 Zutaten Rezept ist super schnell gemacht und SO gut!',
          'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
          'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
          'image': 'nOPT',
          'name': 'Einfacher Nudelauflauf mit Brokkoli',
          'original_url': 'https://kochkarussell.com/einfacher-nudelauflauf-brokkoli/',
          'recipe_id': '9d553779-607e-471b-acf3-84e6be27b159',
          'recipe_yield': '4 servings',
          'slug': 'einfacher-nudelauflauf-mit-brokkoli',
          'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
        }),
        'title': None,
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': None,
        'entry_type': <MealplanEntryType.DINNER: 'dinner'>,
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'mealplan_date': datetime.date(2024, 1, 23),
        'mealplan_id': 219,
        'recipe': dict({
          'description': 'This is a modified Pampered Chef recipe. You can use a trifle bowl or large glass punch/salad bowl to show it off. It is really easy to make and I never have any leftovers. Cook time includes chill time.',
          'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
          'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
          'image': 'ibL6',
          'name': 'Pampered Chef Double Chocolate Mocha Trifle',
          'original_url': 'https://www.food.com/recipe/pampered-chef-double-chocolate-mocha-trifle-74963',
          'recipe_id': '92635fd0-f2dc-4e78-a6e4-ecd556ad361f',
          'recipe_yield': '12 servings',
          'slug': 'pampered-chef-double-chocolate-mocha-trifle',
          'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
        }),
        'title': None,
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': None,
        'entry_type': <MealplanEntryType.DINNER: 'dinner'>,
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'mealplan_date': datetime.date(2024, 1, 22),
        'mealplan_id': 217,
        'recipe': dict({
          'description': 'Cheeseburger Sliders are juicy, cheesy and beefy - everything we love about classic burgers! These sliders are quick and easy plus they are make-ahead and reheat really well.',
          'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
          'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
          'image': 'beGq',
          'name': 'Cheeseburger Sliders (Easy, 30-min Recipe)',
          'original_url': 'https://natashaskitchen.com/cheeseburger-sliders/',
          'recipe_id': '8bdd3656-5e7e-45d3-a3c4-557390846a22',
          'recipe_yield': '24 servings',
          'slug': 'cheeseburger-sliders-easy-30-min-recipe',
          'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
        }),
        'title': None,
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': None,
        'entry_type': <MealplanEntryType.LUNCH: 'lunch'>,
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'mealplan_date': datetime.date(2024, 1, 22),
        'mealplan_id': 216,
        'recipe': dict({
          'description': 'This All-American beef stew recipe includes tender beef coated in a rich, intense sauce and vegetables that bring complementary texture and flavor.',
          'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
          'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
          'image': '356X',
          'name': 'All-American Beef Stew Recipe',
          'original_url': 'https://www.seriouseats.com/all-american-beef-stew-recipe',
          'recipe_id': '48f39d27-4b8e-4c14-bf36-4e1e6497e75e',
          'recipe_yield': '6 servings',
          'slug': 'all-american-beef-stew-recipe',
          'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
        }),
        'title': None,
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': None,
        'entry_type': <MealplanEntryType.DINNER: 'dinner'>,
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'mealplan_date': datetime.date(2024, 1, 23),
        'mealplan_id': 212,
        'recipe': dict({
          'description': 'This All-American beef stew recipe includes tender beef coated in a rich, intense sauce and vegetables that bring complementary texture and flavor.',
          'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
          'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
          'image': '356X',
          'name': 'All-American Beef Stew Recipe',
          'original_url': 'https://www.seriouseats.com/all-american-beef-stew-recipe',
          'recipe_id': '48f39d27-4b8e-4c14-bf36-4e1e6497e75e',
          'recipe_yield': '6 servings',
          'slug': 'all-american-beef-stew-recipe',
          'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
        }),
        'title': None,
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': None,
        'entry_type': <MealplanEntryType.DINNER: 'dinner'>,
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'mealplan_date': datetime.date(2024, 1, 22),
        'mealplan_id': 211,
        'recipe': dict({
          'description': 'Einfacher Nudelauflauf mit Brokkoli, Sahnesauce und extra Käse. Dieses vegetarische 5 Zutaten Rezept ist super schnell gemacht und SO gut!',
          'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
          'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
          'image': 'nOPT',
          'name': 'Einfacher Nudelauflauf mit Brokkoli',
          'original_url': 'https://kochkarussell.com/einfacher-nudelauflauf-brokkoli/',
          'recipe_id': '9d553779-607e-471b-acf3-84e6be27b159',
          'recipe_yield': '4 servings',
          'slug': 'einfacher-nudelauflauf-mit-brokkoli',
          'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
        }),
        'title': None,
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': None,
        'entry_type': <MealplanEntryType.DINNER: 'dinner'>,
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'mealplan_date': datetime.date(2024, 1, 23),
        'mealplan_id': 196,
        'recipe': dict({
          'description': 'Simple to prepare and ready in 25 minutes, this vegetarian miso noodle recipe can be eaten on its own or served as a side.',
          'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
          'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
          'image': '5G1v',
          'name': 'Miso Udon Noodles with Spinach and Tofu',
          'original_url': 'https://www.allrecipes.com/recipe/284039/miso-udon-noodles-with-spinach-and-tofu/',
          'recipe_id': '25b814f2-d9bf-4df0-b40d-d2f2457b4317',
          'recipe_yield': '2 servings',
          'slug': 'miso-udon-noodles-with-spinach-and-tofu',
          'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
        }),
        'title': None,
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': None,
        'entry_type': <MealplanEntryType.DINNER: 'dinner'>,
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'mealplan_date': datetime.date(2024, 1, 22),
        'mealplan_id': 195,
        'recipe': dict({
          'description': 'Avis aux nostalgiques des années 1980, la mousse de saumon est de retour dans une présentation adaptée au goût du jour. On utilise une technique sans faille : un saumon frais cuit au micro-ondes et mélangé au robot avec du fromage à la crème et de la crème sure. On obtient ainsi une texture onctueuse à tartiner, qui n’a rien à envier aux préparations gélatineuses d’antan !',
          'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
          'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
          'image': 'rrNL',
          'name': 'Mousse de saumon',
          'original_url': 'https://www.ricardocuisine.com/recettes/8919-mousse-de-saumon',
          'recipe_id': '55c88810-4cf1-4d86-ae50-63b15fd173fb',
          'recipe_yield': '12 servings',
          'slug': 'mousse-de-saumon',
          'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
        }),
        'title': None,
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': 'Dineren met de boys',
        'entry_type': <MealplanEntryType.DINNER: 'dinner'>,
        'group_id': '3931df86-0679-4579-8c63-4bedc9ca9a85',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'mealplan_date': datetime.date(2024, 6, 30),
        'mealplan_id': 1,
        'recipe': None,
        'title': 'Aquavite',
        'user_id': '6caa6e4d-521f-4ef4-9ed7-388bdd63f47d',
      }),
    ]),
  })
# ---
# name: test_random_mealplan
  dict({
    'description': None,
    'entry_type': <MealplanEntryType.DINNER: 'dinner'>,
    'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
    'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
    'mealplan_date': datetime.date(2024, 1, 21),
    'mealplan_id': 192,
    'recipe': dict({
      'description': 'This is a wonderful option for picnics and grill outs when you are looking for a new take on potato salad. This simple side salad made with cauliflower, peas, and hard boiled eggs can be made the day ahead and chilled until party time!',
      'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
      'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
      'image': 'qLdv',
      'name': 'Cauliflower Salad',
      'original_url': 'https://www.allrecipes.com/recipe/142152/cauliflower-salad/',
      'recipe_id': '40393996-417e-4487-a081-28608a668826',
      'recipe_yield': '6 servings',
      'slug': 'cauliflower-salad',
      'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
    }),
    'title': None,
    'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
  })
# ---
# name: test_recipes
  dict({
    'items': list([
      dict({
        'description': 'Es ist kein Geheimnis: Ich mag es gerne schnell und einfach. Und ich liebe Pasta! Deshalb habe ich mich vor ein paar Wochen auf die Suche nach der perfekten, schnellen Tomatensoße gemacht. Es muss da draußen doch irgendein Rezept geben, das (fast) genauso schnell zuzubereiten ist, wie Miracoli und dabei aber das schöne Gefühl hinterlässt, ...',
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'image': '9QMh',
        'name': 'Pasta mit Tomaten, Knoblauch und Basilikum - einfach (und) genial! - Kuechenchaotin',
        'original_url': 'https://kuechenchaotin.de/pasta-mit-tomaten-knoblauch-basilikum/',
        'recipe_id': 'eab64457-97ba-4d6c-871c-cb1c724ccb51',
        'recipe_yield': '',
        'slug': 'pasta-mit-tomaten-knoblauch-und-basilikum-einfach-und-genial-kuechenchaotin',
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': 'Har du inte provat denna trendiga pasta är det hög tid! Enkel och gräddig vardagspasta med smak av tomat och chili och en hemlig ingrediens som ger denna rätt extra sting, nämligen vodka.',
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'image': 'z8BB',
        'name': 'Vodkapasta',
        'original_url': 'https://www.ica.se/recept/vodkapasta-729011/',
        'recipe_id': '6402a253-2baa-460d-bf4f-b759bb655588',
        'recipe_yield': '4 servings',
        'slug': 'vodkapasta',
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': 'Har du inte provat denna trendiga pasta är det hög tid! Enkel och gräddig vardagspasta med smak av tomat och chili och en hemlig ingrediens som ger denna rätt extra sting, nämligen vodka.',
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'image': 'Nqpz',
        'name': 'Vodkapasta2',
        'original_url': 'https://www.ica.se/recept/vodkapasta-729011/',
        'recipe_id': '4f54e9e1-f21d-40ec-a135-91e633dfb733',
        'recipe_yield': '4 servings',
        'slug': 'vodkapasta2',
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': 'Tagliatelle al Salmone - wie beim Italiener. Über 1568 Bewertungen und für vorzüglich befunden. Mit ► Portionsrechner ► Kochbuch ► Video-Tipps!',
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'image': 'qzaN',
        'name': 'Tagliatelle al Salmone',
        'original_url': 'https://www.chefkoch.de/rezepte/2109501340136606/Tagliatelle-al-Salmone.html',
        'recipe_id': 'a051eafd-9712-4aee-a8e5-0cd10a6772ee',
        'recipe_yield': '4 servings',
        'slug': 'tagliatelle-al-salmone',
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': 'Tortelline - á la Romana. Über 13 Bewertungen und für vorzüglich befunden. Mit ► Portionsrechner ► Kochbuch ► Video-Tipps! Jetzt entdecken und ausprobieren!',
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'image': 'rkSn',
        'name': 'Tortelline - á la Romana',
        'original_url': 'https://www.chefkoch.de/rezepte/74441028021809/Tortelline-a-la-Romana.html',
        'recipe_id': '973dc36d-1661-49b4-ad2d-0b7191034fb3',
        'recipe_yield': '4 servings',
        'slug': 'tortelline-a-la-romana',
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
    ]),
  })
# ---
# name: test_recipes.1
  dict({
    'items': list([
      dict({
        'description': 'Es ist kein Geheimnis: Ich mag es gerne schnell und einfach. Und ich liebe Pasta! Deshalb habe ich mich vor ein paar Wochen auf die Suche nach der perfekten, schnellen Tomatensoße gemacht. Es muss da draußen doch irgendein Rezept geben, das (fast) genauso schnell zuzubereiten ist, wie Miracoli und dabei aber das schöne Gefühl hinterlässt, ...',
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'image': '9QMh',
        'name': 'Pasta mit Tomaten, Knoblauch und Basilikum - einfach (und) genial! - Kuechenchaotin',
        'original_url': 'https://kuechenchaotin.de/pasta-mit-tomaten-knoblauch-basilikum/',
        'recipe_id': 'eab64457-97ba-4d6c-871c-cb1c724ccb51',
        'recipe_yield': '',
        'slug': 'pasta-mit-tomaten-knoblauch-und-basilikum-einfach-und-genial-kuechenchaotin',
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': 'Har du inte provat denna trendiga pasta är det hög tid! Enkel och gräddig vardagspasta med smak av tomat och chili och en hemlig ingrediens som ger denna rätt extra sting, nämligen vodka.',
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'image': 'z8BB',
        'name': 'Vodkapasta',
        'original_url': 'https://www.ica.se/recept/vodkapasta-729011/',
        'recipe_id': '6402a253-2baa-460d-bf4f-b759bb655588',
        'recipe_yield': '4 servings',
        'slug': 'vodkapasta',
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': 'Har du inte provat denna trendiga pasta är det hög tid! Enkel och gräddig vardagspasta med smak av tomat och chili och en hemlig ingrediens som ger denna rätt extra sting, nämligen vodka.',
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'image': 'Nqpz',
        'name': 'Vodkapasta2',
        'original_url': 'https://www.ica.se/recept/vodkapasta-729011/',
        'recipe_id': '4f54e9e1-f21d-40ec-a135-91e633dfb733',
        'recipe_yield': '4 servings',
        'slug': 'vodkapasta2',
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': 'Tagliatelle al Salmone - wie beim Italiener. Über 1568 Bewertungen und für vorzüglich befunden. Mit ► Portionsrechner ► Kochbuch ► Video-Tipps!',
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'image': 'qzaN',
        'name': 'Tagliatelle al Salmone',
        'original_url': 'https://www.chefkoch.de/rezepte/2109501340136606/Tagliatelle-al-Salmone.html',
        'recipe_id': 'a051eafd-9712-4aee-a8e5-0cd10a6772ee',
        'recipe_yield': '4 servings',
        'slug': 'tagliatelle-al-salmone',
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
      dict({
        'description': 'Tortelline - á la Romana. Über 13 Bewertungen und für vorzüglich befunden. Mit ► Portionsrechner ► Kochbuch ► Video-Tipps! Jetzt entdecken und ausprobieren!',
        'group_id': '0bf60b2e-ca89-42a9-94d4-8f67ca72b157',
        'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
        'image': 'rkSn',
        'name': 'Tortelline - á la Romana',
        'original_url': 'https://www.chefkoch.de/rezepte/74441028021809/Tortelline-a-la-Romana.html',
        'recipe_id': '973dc36d-1661-49b4-ad2d-0b7191034fb3',
        'recipe_yield': '4 servings',
        'slug': 'tortelline-a-la-romana',
        'user_id': '1ce8b5fe-04e8-4b80-aab1-d92c94685c6d',
      }),
    ]),
  })
# ---
# name: test_retrieving_recipe
  dict({
    'date_added': datetime.date(2024, 6, 29),
    'description': 'The world’s most famous cake, the Original Sacher-Torte, is the consequence of several lucky twists of fate. The first was in 1832, when the Austrian State Chancellor, Prince Klemens Wenzel von Metternich, tasked his kitchen staff with concocting an extraordinary dessert to impress his special guests. As fortune had it, the chef had fallen ill that evening, leaving the apprentice chef, the then-16-year-old Franz Sacher, to perform this culinary magic trick. Metternich’s parting words to the talented teenager: “I hope you won’t disgrace me tonight.”',
    'group_id': '24477569-f6af-4b53-9e3f-6d04b0ca6916',
    'household_id': 'cd2bb87f-5e4c-4dc6-8477-af9537200014',
    'image': 'SuPW',
    'ingredients': list([
      dict({
        'is_food': True,
        'note': '130g dark couverture chocolate (min. 55% cocoa content)',
        'quantity': 1.0,
        'reference_id': 'a3adfe78-d157-44d8-98be-9c133e45bb4e',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '1 Vanilla Pod',
        'quantity': 1.0,
        'reference_id': '41d234d7-c040-48f9-91e6-f4636aebb77b',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '150g softened butter',
        'quantity': 1.0,
        'reference_id': 'f6ce06bf-8b02-43e6-8316-0dc3fb0da0fc',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '100g Icing sugar',
        'quantity': 1.0,
        'reference_id': 'f7fcd86e-b04b-4e07-b69c-513925811491',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '6 Eggs',
        'quantity': 1.0,
        'reference_id': 'a831fbc3-e2f5-452e-a745-450be8b4a130',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '100g Castor sugar',
        'quantity': 1.0,
        'reference_id': 'b5ee4bdc-0047-4de7-968b-f3360bbcb31e',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '140g Plain wheat flour',
        'quantity': 1.0,
        'reference_id': 'a67db09d-429c-4e77-919d-cfed3da675ad',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '200g apricot jam',
        'quantity': 1.0,
        'reference_id': '55479752-c062-4b25-aae3-2b210999d7b9',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '200g castor sugar',
        'quantity': 1.0,
        'reference_id': 'ff9cd404-24ec-4d38-b0aa-0120ce1df679',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': '150g dark couverture chocolate (min. 55% cocoa content)',
        'quantity': 1.0,
        'reference_id': 'c7fca92e-971e-4728-a227-8b04783583ed',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': 'Unsweetend whipped cream to garnish',
        'quantity': 1.0,
        'reference_id': 'ef023f23-7816-4871-87f6-4d29f9a283f7',
        'unit': None,
      }),
      dict({
        'is_food': True,
        'note': 'A little water',
        'quantity': None,
        'reference_id': '811328dc-a5d4-4104-80d2-e26fc52b5966',
        'unit': None,
      }),
    ]),
    'instructions': list([
      dict({
        'ingredient_references': list([
        ]),
        'instruction_id': '2d558dbf-5361-4ef2-9d86-4161f5eb6146',
        'text': 'Preheat oven to 170°C. Line the base of a springform with baking paper, grease the sides, and dust with a little flour. Melt couverture over boiling water. Let cool slightly.',
        'title': None,
      }),
      dict({
        'ingredient_references': list([
        ]),
        'instruction_id': 'dbcc1c37-3cbf-4045-9902-8f7fd1e68f0a',
        'text': 'Slit vanilla pod lengthwise and scrape out seeds. Using a hand mixer with whisks, beat the softened butter with the icing sugar and vanilla seeds until bubbles appear.',
        'title': None,
      }),
      dict({
        'ingredient_references': list([
        ]),
        'instruction_id': '2265bd14-a691-40b1-9fe6-7b5dfeac8401',
        'text': 'Separate the eggs. Whisk the egg yolks into the butter mixture one by one. Now gradually add melted couverture chocolate. Beat the egg whites with the castor sugar until stiff, then place on top of the butter and chocolate mixture. Sift the flour over the mixture, then fold in the flour and beaten egg whites.',
        'title': None,
      }),
      dict({
        'ingredient_references': list([
        ]),
        'instruction_id': '0aade447-dfac-4aae-8e67-ac250ad13ae2',
        'text': "Transfer the mixture to the springform, smooth the top, and bake in the oven (middle rack) for 10–15 minutes, leaving the oven door a finger's width ajar. Then close the oven and bake for approximately 50 minutes. (The cake is done when it yields slightly to the touch.)",
        'title': None,
      }),
      dict({
        'ingredient_references': list([
        ]),
        'instruction_id': '5fdcb703-7103-468d-a65d-a92460b92eb3',
        'text': 'Remove the cake from the oven and loosen the sides of the springform. Carefully tip the cake onto a cake rack lined with baking paper and let cool for approximately 20 minutes. Then pull off the baking paper, turn the cake over, and leave on rack to cool completely.',
        'title': None,
      }),
      dict({
        'ingredient_references': list([
        ]),
        'instruction_id': '81474afc-b44e-49b3-bb67-5d7dab8f832a',
        'text': 'Cut the cake in half horizontally. Warm the jam and stir until smooth. Brush the top of both cake halves with the jam and place one on top of the other. Brush the sides with the jam as well.',
        'title': None,
      }),
      dict({
        'ingredient_references': list([
        ]),
        'instruction_id': '8fac8aee-0d3c-4f78-9ff8-56d20472e5f1',
        'text': 'To make the glaze, put the castor sugar into a saucepan with 125 ml water and boil over high heat for approximately 5 minutes. Take the sugar syrup off the stove and leave to cool a little. Coarsely chop the couverture, gradually adding it to the syrup, and stir until it forms a thick liquid (see tip below).',
        'title': None,
      }),
      dict({
        'ingredient_references': list([
        ]),
        'instruction_id': '7162e099-d651-4656-902a-a09a9b40c4e1',
        'text': 'Pour all the lukewarm glaze liquid at once over the top of the cake and quickly spread using a palette knife. Leave the glaze to set for a few hours. Serve garnished with whipped cream.',
        'title': None,
      }),
    ]),
    'name': 'Original Sacher-Torte (2)',
    'original_url': 'https://www.sacher.com/en/original-sacher-torte/recipe/',
    'recipe_id': 'fada9582-709b-46aa-b384-d5952123ad93',
    'recipe_yield': '4 servings',
    'slug': 'original-sacher-torte-2',
    'tags': list([
      dict({
        'name': 'Sacher',
        'slug': 'sacher',
        'tag_id': '1b5789b9-3af6-412e-8c77-8a01caa0aac9',
      }),
      dict({
        'name': 'Cake',
        'slug': 'cake',
        'tag_id': '1cf17f96-58b5-4bd3-b1e8-1606a64b413d',
      }),
      dict({
        'name': 'Torte',
        'slug': 'torte',
        'tag_id': '3f5f0a3d-728f-440d-a6c7-5a68612e8c67',
      }),
      dict({
        'name': 'Sachertorte',
        'slug': 'sachertorte',
        'tag_id': '525f388d-6ee0-4ebe-91fc-dd320a7583f0',
      }),
      dict({
        'name': 'Sacher Torte Cake',
        'slug': 'sacher-torte-cake',
        'tag_id': '544a6e08-a899-4f63-9c72-bb2924df70cb',
      }),
      dict({
        'name': 'Sacher Torte',
        'slug': 'sacher-torte',
        'tag_id': '576c0a82-84ee-4e50-a14e-aa7a675b6352',
      }),
      dict({
        'name': 'Original Sachertorte',
        'slug': 'original-sachertorte',
        'tag_id': 'd530b8e4-275a-4093-804b-6d0de154c206',
      }),
    ]),
    'user_id': 'bf1c62fe-4941-4332-9886-e54e88dbdba0',
  })
# ---
# name: test_shopping_items
  dict({
    'items': list([
      dict({
        'checked': False,
        'disable_amount': True,
        'display': '2 Apples',
        'food_id': None,
        'is_food': False,
        'item_id': 'f45430f7-3edf-45a9-a50f-73bb375090be',
        'label_id': None,
        'list_id': '9ce096fe-ded2-4077-877d-78ba450ab13e',
        'note': 'Apples',
        'position': 0,
        'quantity': 2.0,
        'unit_id': None,
      }),
      dict({
        'checked': False,
        'disable_amount': False,
        'display': '1 can acorn squash',
        'food_id': '09322430-d24c-4b1a-abb6-22b6ed3a88f5',
        'is_food': True,
        'item_id': '84d8fd74-8eb0-402e-84b6-71f251bfb7cc',
        'label_id': None,
        'list_id': '9ce096fe-ded2-4077-877d-78ba450ab13e',
        'note': '',
        'position': 1,
        'quantity': 1.0,
        'unit_id': '7bf539d4-fc78-48bc-b48e-c35ccccec34a',
      }),
      dict({
        'checked': False,
        'disable_amount': False,
        'display': 'aubergine',
        'food_id': '96801494-4e26-4148-849a-8155deb76327',
        'is_food': True,
        'item_id': '69913b9a-7c75-4935-abec-297cf7483f88',
        'label_id': None,
        'list_id': '9ce096fe-ded2-4077-877d-78ba450ab13e',
        'note': '',
        'position': 2,
        'quantity': 0.0,
        'unit_id': None,
      }),
    ]),
  })
# ---
# name: test_shopping_lists
  dict({
    'items': list([
      dict({
        'list_id': '27edbaab-2ec6-441f-8490-0283ea77585f',
        'name': 'Supermarket',
      }),
      dict({
        'list_id': 'f8438635-8211-4be8-80d0-0aa42e37a5f2',
        'name': 'Special groceries',
      }),
      dict({
        'list_id': 'e9d78ff2-4b23-4b77-a3a8-464827100b46',
        'name': 'Freezer',
      }),
    ]),
  })
# ---
# name: test_startup_info
  dict({
    'is_first_login': True,
  })
# ---
# name: test_statistics
  dict({
    'total_categories': 24,
    'total_recipes': 765,
    'total_tags': 454,
    'total_tools': 11,
    'total_users': 3,
  })
# ---
# name: test_theme
  dict({
    'dark_accent': '#007A99',
    'dark_error': '#EF5350',
    'dark_info': '#1976D2',
    'dark_primary': '#E58325',
    'dark_secondary': '#973542',
    'dark_success': '#43A047',
    'dark_warning': '#FF6D00',
    'light_accent': '#007A99',
    'light_error': '#EF5350',
    'light_info': '#1976D2',
    'light_primary': '#E58325',
    'light_secondary': '#973542',
    'light_success': '#43A047',
    'light_warning': '#FF6D00',
  })
# ---
# name: test_user_info
  dict({
    'email': 'changeme@example.com',
    'full_name': 'Change Me',
    'user_id': 'bf1c62fe-4941-4332-9886-e54e88dbdba0',
    'username': 'admin',
  })
# ---
